Tue Aug  8 09:15:00 UTC 2006  Simon Massey  <sma@prismtech.com>

        * ace/OS_Memory.h
        * ace/config-win32-msvc.h
        * bin/MakeProjectCreator/config/ace_mfc.mpb
        * bin/MakeProjectCreator/config/acedefaults.mpb

          Chad's fix for MPC building MFC projects. Correction for
          Thu Apr 27 21:04:08 UTC 2006  Steve Huston  <shuston@riverace.com>
          throw CMemoryException on out-of-memory condition. These
          exceptions must be caught by pointer and thrown via calling
          AfxThrowMemoryException ().

Tue Aug  8 08:06:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_Base.cpp:
        * ace/Select_Reactor_T.cpp:
          Const improvements, use bool when possible

Tue Aug  8 07:46:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/generate_rel_manpages:
        * bin/make_release:
          Did a little bit of cleanup removing old things

Tue Aug  8 07:11:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Select_Reactor_T.cpp (dump):
          Removed usage of not needed operator++ on the handle set

Mon Aug  7 08:02:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Handle_Set.{h,cpp}:
          Removed operator++, it is deprecated and nothing more then a noop

Fri Aug  4 07:57:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Asynch_IO.h:
        * ace/Event_Handler.h:
        * ace/Framework_Component_T.h:
        * ace/Hash_Map_Manager_T.h:
        * ace/IO_SAP.h:
        * ace/Local_Tokens.h:
        * ace/LSOCK_Connector.h:
        * ace/Map_Manager.h:
        * ace/Map_T.h:
        * ace/WFM_Reactor.h:
          Doxygen improvements

Thu Aug  3 10:39:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Connector.h:
          Improved documentation

Wed Aug  2 22:54:24 UTC 2006  Phil Mesnier  <mesnier_p@ociweb.com>

        * THANKS: Added Eric Danielou to the hall of fame.
